--- a/src/main/resources/templates/views/commons/layout.html
+++ b/src/main/resources/templates/views/commons/layout.html
@@ -25,7 +25,9 @@
 	<!-- 챗봇  -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="stylesheet" href="/css/chatbot/bot.css"/>
-  	<script src="/js/chatbot/bot.js"></script>
+	<link rel="stylesheet" href="/css/chatbot/mode-switch.css"/>
+  	<script src="/js/chatbot/common-bot.js"></script>
+  	
 	<!-- //// -->
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
@@ -43,21 +45,25 @@
 	<!--  챗봇 영역  -->
 	<!-- ///////// -->
 	<section>
-		    <!-- 챗봇 이미지 -->
-		    <img class="animate__animated animate__pulse animate__slower animate__infinite" id="chat-icon" src="/img/bot/botlogo.png" alt="Chatbot Icon" />
-		    <!-- 챗봇 창 -->
-		    <div id="bot-container">
-		    	<div id="bot-top">
-			        <button id="close-button"><i class="ri-close-line"></i></button> <!-- 닫기 버튼 -->
-		    	</div>
-		        <div id="chat-content"></div>
-		        <div id="input-container">
-		            <input type="text" id="question" placeholder="질문을 입력하세요." />
-		            <button id="send-button">보내기</button>
-		        </div>
-		    </div>
-			
-		
+    	<!-- 챗봇 이미지 -->
+	    <img class="animate__animated animate__pulse animate__slower animate__infinite" id="chat-icon" src="/img/bot/botlogo.png" alt="Chatbot Icon" />
+	    <!-- 챗봇 창 -->
+	    <div id="bot-container">
+	        <div id="bot-top">
+	            <p id="service-info" class="switch-name">서비스 안내</p>
+	            <p id="search-info" class="switch-name" style="display:none;">줄거리 검색</p>
+	            <label class="switch round">
+	                <input type="checkbox" id="mode-switch">
+	                <span class="slider-btn round"></span>
+	            </label>
+	            <button id="close-button"><i class="ri-close-line"></i></button> <!-- 닫기 버튼 -->
+	        </div>
+	        <div id="chat-content"></div>
+	        <div id="input-container">
+	            <input type="text" id="question" placeholder="질문을 입력하세요." />
+	            <button id="send-button">보내기</button>
+	        </div>
+	    </div>
 	</section>
 	<!-- ///////// -->
 	<!-- ///////// -->
