--- a/src/main/resources/templates/views/commons/layout.html
+++ b/src/main/resources/templates/views/commons/layout.html
@@ -50,8 +50,8 @@
 	    <!-- 챗봇 창 -->
 	    <div id="bot-container">
 	        <div id="bot-top">
-	            <p id="service-info" class="switch-name">서비스 안내</p>
-	            <p id="search-info" class="switch-name" style="display:none;">줄거리 검색</p>
+	            <p id="service-info" class="switch-off">AI모드 OFF</p>
+	            <p id="search-info" class="switch-on" style="display:none;">AI모드 ON</p>
 	            <label class="switch round">
 	                <input type="checkbox" id="mode-switch">
 	                <span class="slider-btn round"></span>
