--- a/src/main/resources/templates/views/mypage/favorite.html
+++ b/src/main/resources/templates/views/mypage/favorite.html
@@ -53,7 +53,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 				                    </form>
 				                </div>
 				            </div>
-				            <h3 th:text="${favorite.bookName}">책 제목</h3>
+				            <h3 th:text="${favorite.bookName}" th:attr="onclick=|window.location.href='@{/detail/{isbn}(isbn=${favorite.isbn})}'|">책 제목</h3>
 				            <p th:text="${favorite.author}">저자</p>
 				        </div>
 				    </div>
@@ -63,6 +63,24 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 		            		<span>위시리스트에 담긴 상품이 없습니다.</span>
 		            	</p>
 		            </div>
+				</section>
+				
+				<section class="wish-list" th:if="${summaryReview}">
+				
+					<div class="book-list">
+					    <div class="book-items randomBook">
+					        <img th:src="${randomBook.bookImg}">
+					        <a th:text="${randomBook.bookName}" th:href="@{/detail/{isbn}(isbn=${randomBook.isbn})}">책 제목</a>
+					        <p th:text="${randomBook.author}" class="author">저자</p>
+					    </div>
+					    <form class="review-container" action="" method="post">
+					    	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+					    	<input type="hidden" th:value="${randomBook.isbn}" name="isbn">
+					    	<span>🖐 해당 도서의 리뷰를 AI가 정리했어요!</span>
+					    	<p th:text="${summaryReview}">이 책은 어린 아이들이 좋아할 것 같은 책이에요. 왜냐하면...</p>
+					    	<button class="coupon-button">해당 책 쿠폰 받기</button>
+					    </form>
+					</div>
 				</section>
 				
             </div>
