--- a/src/main/resources/templates/views/commons/layout.html
+++ b/src/main/resources/templates/views/commons/layout.html
@@ -44,6 +44,7 @@
 	<!-- ///////// -->
 	<!--  챗봇 영역  -->
 	<!-- ///////// -->
+	<footer th:replace="~{views/commons/recent-book}"></footer>
 	<section>
     	<!-- 챗봇 이미지 -->
 	    <img class="animate__animated animate__pulse animate__slower animate__infinite" id="chat-icon" src="/img/bot/botlogo.png" alt="Chatbot Icon" />
