--- a/src/main/resources/static/css/chatbot/bot.css
+++ b/src/main/resources/static/css/chatbot/bot.css
@@ -49,8 +49,8 @@ p{
 /*/////////////////////////*/
 #bot-container {
     position: fixed;
-    bottom: 10%;
-    right: 60px;
+    bottom: 80px;
+    right: 20px;
     background: #fff8f4;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -62,6 +62,7 @@ p{
     transform: translateY(100%); /* Initially hidden */
     opacity: 0; /* Initially hidden */
     transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+    z-index: 2;
 }
 
 #bot-container.open {
