--- a/src/main/resources/static/css/common/footer.css
+++ b/src/main/resources/static/css/common/footer.css
@@ -1,4 +1,48 @@
+/* 최근 본 도서 */
+.recent-books {
+	position: fixed;
+    bottom: 180px;
+    right: 37.5px;
+    z-index: 1;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
+.recent-books a {
+	display: block;
+	margin-top: 0;
+	margin-bottom: 10px;
+	font-size: 16px;
+	font-weight: 700;
+}
+
+.book-history {
+	display: flex;
+	align-items: center;
+	margin-bottom: 10px;
+}
+
+.book-history:last-child {
+	margin-bottom: 0;
+}
+
+.book-history img {
+	width: 90px;
+    height: 115px;
+    border-radius: 5px;
+
+}
+
+
+/* 푸터 */
 .footer {
 	background-color: var(--very-light-grey);
 	color: var(--dark-grey);
