--- a/src/main/resources/static/css/common/header.css
+++ b/src/main/resources/static/css/common/header.css
@@ -55,6 +55,7 @@ header, main {
 	margin: 0 20px;
 	flex-grow: 1;
 	background-color: white;
+	position: relative;
 }
 
 .search-container form {
@@ -132,76 +133,6 @@ header, main {
     justify-content: center;
     z-index: 1000; /* 가장 위에 표시되도록 설정 */
 }
-
-/* 모달 콘텐츠 */
-/* .modal-content {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 300px; 모달의 너비를 설정
-    position: relative;
-}
-#cameraButton {
-    font-size: 24px;
-    cursor: pointer;
-    border: none;
-    background: none;
-}
-
-#fileUploadContainer {
-    display: none;
-    position: relative;
-    margin-top: 10px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: fit-content;
-    background-color: #f9f9f9;
-}
-
-#fileUploadContainer {
-    display: none;
-    position: fixed;
-    top: 20%; 화면의 세로 중앙에 위치
-    left: 30%; 화면의 가로 중앙에 위치
-    transform: translate(-50%, -50%); 요소의 중심이 정확히 중앙에 위치하도록 조정
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    z-index: 1000; 다른 요소 위에 표시되도록 설정
-    width: fit-content; 내용에 맞게 너비 조정
-}
-#imageFile {
-    display: block;
-    margin-bottom: 10px;
-}
-#imagePreview {
-    display: none;
-    margin-top: 10px;
-    max-width: 300px;
-    max-height: 150px;
-}
-#confirmButton {
-    display: none;
-    margin-right: 10px;
-}
-#closeButton {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 18px;
-    cursor: pointer;
-    background: none;
-    border: none;
-    color: #333;
-}
-#closeButton:hover {
-    color: #f44336;
-} */
-
-
 
 /*헤더 - 하  */
 .header-bottom {
@@ -416,4 +347,56 @@ header, main {
 #confirmButton {
     display: none;
     margin-right: 10px;
+}
+
+
+/* 검색 기록 */
+/* 기존 CSS 유지 */
+
+.search-input-wrapper {
+  flex-grow: 1;
+}
+
+.recent-text{
+	padding-left: 20px;
+	color: var(--grey);
+}
+
+.recent-searches {
+  	display: none;
+    position: absolute;
+    top: 51px;
+    left: 0;
+    width: 570px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+.recent-searches ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.recent-searches li {
+  padding: 15px 20px;
+  border-bottom: 1px solid #eee;
+  cursor: pointer;
+}
+.recent-searches li:first-child {
+    border-top: 1px solid #eee;
+}
+.recent-searches li:last-child {
+  border-bottom: none;
+}
+
+.recent-searches li:hover {
+  background-color: #f5f5f5;
+}
+
+#queryInput:focus + .recent-searches {
+  display: block;
 }
