--- a/src/main/resources/templates/views/commons/layout.html
+++ b/src/main/resources/templates/views/commons/layout.html
@@ -10,6 +10,7 @@
 	<script src="https://kit.fontawesome.com/bcc4a0fa81.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="/js/mainContent/menuButton.js"></script>
+	<script src="/js/mainContent/speechstt.js"></script>
 	
 	
 	<!-- 챗봇  -->
