--- a/src/main/resources/static/css/mainContent/main_content.css
+++ b/src/main/resources/static/css/mainContent/main_content.css
@@ -92,8 +92,8 @@
 }
 
 .book-item img {
-    width: 100%;
-    height: auto;
+    width: 230px;
+    height: 340px;
     object-fit: cover;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     transition: transform 0.3s ease;
@@ -108,6 +108,13 @@
     font-weight: bold;
     font-size: 16px;
     text-align: center;
+    display: -webkit-box;           /* 부모 요소로 지정 */
+	-webkit-box-orient: vertical;   /* 텍스트의 방향을 수직으로 지정 */
+	-webkit-line-clamp: 2;          /* 최대 줄 수를 2줄로 제한 */
+	overflow: hidden;               /* 넘치는 내용 숨김 */
+	text-overflow: ellipsis;        /* 말줄임표(...)를 추가 */
+    align-items: center;
+    height: 50px;
 }
 
 .book-author {
@@ -115,6 +122,11 @@
     color: #666;
     font-size: 14px;
     text-align: center;
+    display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 1;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .book-prev{left: 300px;}
 .book-next{right:300px;}
